  - Fix parse_option_marker for option arguments containing ``=``.

.. _Pygments: http://pygments.org/

* setup.py

  - Fix [ 2971827 ] and [ 3442827 ]
    extras/roman.py moved to docutils/utils/roman.py

* docutils/frontend.py

  - Fix [ 3481980 ] Use os.getcwdu() in make_paths_absolute().

* docutils/io.py

  - Fix [ 3395948 ] (Work around encoding problems in Py3k).

* docutils/utils.py -> docutils/utils/__init__.py

  - docutils.utils is now a package (providing a place for sub-modules)

  .. note:: docutils/math, docutils/error_reporting.py, and
     docutils/urischemes.py will move to the utils package in the next
     release, too. See RELEASE-NOTES__

     __ RELEASE-NOTES.html

  - DependencyList uses io.FileOutput and 'utf8' encoding to prevent
    errors recording non-ASCII filenames (fixes [ 3434355 ]).

  - Fix relative_path() with source=None and `unicode` target.

* docutils/parsers/rst/states.py

  - Fix [ 3402314 ] allow non-ASCII whitespace, punctuation
    characters and "international" quotes around inline markup.
  - Use `field_marker` pattern to look for start of a
    directive option block (fixes [ 3484857 ]).

* docutils/parsers/rst/tableparser.py

  - Fix [ 2926161 ] for simple tables.
    (Combining chars in grid tables still contribute to cell width.)

* docutils/writers/latex2e/__init__.py

  - Support the `abbreviation` and `acronym` standard roles.
  - Record only files required to generate the LaTeX source as dependencies.
  - Fix handling of missing stylesheets.
  - Use ``\setcounter{secnumdepth}{0}`` instead of ``*``-versions
    when suppressing LaTeX section numbering.
  - Use ``\DUtitle`` for unsupported section levels

* docutils/writers/html4css1/__init__.py

  - Change default for `math-output` setting to MathJax.
  - Fix handling of missing stylesheets.

* docutils/writers/docutils_xml.py

  - Use the visitor pattern with default_visit()/default_depart() methods